# Invoicer

./: CMakeLists.txt  main.c  makefile  mingw-toolchain.cmake  namespace.h  nuklear_glfw_gl3.c  nuklear_impl.c  nuklear_impl.h
UI/invoice-selector/: invoice-selector.c  invoice-selector.h
UI/invoice-volume/: invoice_volume.h
UI/invoicer-form/: invoice_form.c  invoice_form.h
core/Application/: application.c  application.h
core/Event/: event.c  event.h
core/Event-emitter/: event-emitter.c  event-emitter.h
core/invoicer-form/: invoice_form.c  invoice_form.h
core/sys/String/: String.c  String.h
interfaces/IComponent/: IComponent.c  IComponent.h
interfaces/invoice-volume/: invoice_volume.c
interfaces/signal/: signal.c  signal.h
services/FileReader/: FileReader.c  FileReader.h
services/Invoice-service/: invoice-service.c  invoice-service.h
services/data-service/: data-service.c  data-service.h
src/: Invoices.csv
